--- a/www/.htaccess
+++ b/www/.htaccess
@@ -6,9 +6,11 @@ RewriteEngine on
 RewriteCond %{HTTP_HOST} ^www\.localhost$
 RewriteRule (.*) http://localhost/$1 [R=301,L]
 
-<FilesMatch "\.(css|js|png|svg|ttf)$">
-    Header set Cache-Control "public, max-age=31536000"
-</FilesMatch>
+<IfModule mod_headers.c>
+    <FilesMatch "\.(css|js|png|svg|ttf)$">
+        Header set Cache-Control "public, max-age=31536000"
+    </FilesMatch>
+</IfModule>
 
 DirectoryIndex index.php
 
